fixed https://github.com/behappy-project/behappy-screw-doc/issues/9 https://github.com/behappy-project/behappy-screw-doc/issues/8 https://github.com/behappy-project/behappy-screw-doc/issues/7